--- a/travel-booking/package.json
+++ b/travel-booking/package.json
@@ -2,25 +2,36 @@
   "name": "travel-booking",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "node server/server.js",
+    "dev:all": "concurrently \"npm run dev\" \"npm run server\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@vitejs/plugin-vue": "^5.2.4",
-    "@vuepic/vue-datepicker": "^11.0.2",
-    "csv-parser": "^3.2.0",
-    "vite": "^6.3.5",
-    "vue": "^3.5.15"
+    "@vitejs/plugin-vue": "^5.0.0",
+    "@vuepic/vue-datepicker": "^7.2.0",
+    "axios": "^1.6.2",
+    "body-parser": "^1.20.2",
+    "concurrently": "^8.2.2",
+    "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "lodash-es": "^4.17.21",
+    "vite": "^5.0.0",
+    "vue": "^3.3.8",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3"
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5"
   }
 }
