--- a/travel-booking/package.json
+++ b/travel-booking/package.json
@@ -24,6 +24,7 @@
     "csv-parser": "^3.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fast-xml-parser": "^5.2.4",
     "lodash-es": "^4.17.21",
     "vite": "^5.0.0",
     "vue": "^3.3.8",
